--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/validator": "^13.7.11",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "brcypt": "^1.0.1",
     "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
