--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --files ./src/index.ts",
-    "start": "node ./dist/src/index.js",
+    "start": "node ./dist/index.js",
     "build": "tsc"
   },
   "keywords": [],
