--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --files ./src/index.ts",
-    "start": "node ./dist/index.js",
+    "start1": "node ./dist/index.js",
+    "start": "ts-node-dev --respawn --transpile-only check.ts",
     "build": "tsc"
   },
   "keywords": [],
