--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --files ./src/index.ts",
-    "start1": "node ./dist/index.js",
-    "start": "ts-node-dev --respawn --transpile-only check.ts",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
+    "start": "node ./dist/index.js",
     "build": "tsc"
   },
   "keywords": [],
