--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.15",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.1",
@@ -34,6 +35,7 @@
     "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "googleapis": "^114.0.0",
     "joi": "^17.7.0",
