--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@superfaceai/one-sdk": "^2.4.2",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.15",
+    "@types/ip": "^1.1.0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
@@ -38,6 +40,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "googleapis": "^114.0.0",
+    "ip": "^1.1.8",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
